// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueDiff can diff message 1`] = `
<IssueDiff
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  baseEventId="latest"
  baseIssueId="base"
  orgId="org-slug"
  projectId="project-slug"
  targetEventId="latest"
  targetIssueId="target"
>
  <StyledIssueDiff
    loading={false}
  >
    <div
      className="css-1ap3513-StyledIssueDiff erclscl0"
    >
      <SplitDiff
        base="Foo World"
        key="0"
        target="Hello World"
        type="words"
      >
        <SplitTable>
          <table
            className="css-wsqk0b-SplitTable ecj3sk90"
          >
            <SplitBody>
              <tbody
                className="css-19qmpmx-SplitBody ecj3sk91"
              >
                <tr
                  key="0"
                >
                  <Cell
                    isRemoved={
                      Object {
                        "added": undefined,
                        "count": 1,
                        "removed": true,
                        "value": "Foo",
                      }
                    }
                  >
                    <td
                      className="css-cpyxzz-Cell ecj3sk92"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line ecj3sk94"
                        >
                          <Word
                            isRemoved={true}
                            key="0"
                          >
                            <span
                              className="css-1hluz4h-Word ecj3sk95"
                            >
                              Foo
                            </span>
                          </Word>
                          <Word
                            key="1"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                               World
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                  <Gap>
                    <td
                      className="css-yrby37-Gap ecj3sk93"
                    />
                  </Gap>
                  <Cell
                    isAdded={
                      Object {
                        "added": true,
                        "count": 1,
                        "removed": undefined,
                        "value": "Hello",
                      }
                    }
                  >
                    <td
                      className="css-uc8op2-Cell ecj3sk92"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line ecj3sk94"
                        >
                          <Word
                            isAdded={true}
                            key="0"
                          >
                            <span
                              className="css-1pqukun-Word ecj3sk95"
                            >
                              Hello
                            </span>
                          </Word>
                          <Word
                            key="1"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                               World
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                </tr>
              </tbody>
            </SplitBody>
          </table>
        </SplitTable>
      </SplitDiff>
    </div>
  </StyledIssueDiff>
</IssueDiff>
`;

exports[`IssueDiff can dynamically import SplitDiff 1`] = `
<IssueDiff
  api={
    Client {
      "_chain": [Function],
      "_wrapRequest": [Function],
      "bulkUpdate": [Function],
      "handleRequestError": [Function],
      "hasProjectBeenRenamed": [Function],
    }
  }
  baseEventId="latest"
  baseIssueId="base"
  orgId="org-slug"
  projectId="project-slug"
  targetEventId="latest"
  targetIssueId="target"
>
  <StyledIssueDiff
    loading={false}
  >
    <div
      className="css-1ap3513-StyledIssueDiff erclscl0"
    >
      <SplitDiff
        base="SyntaxError: Unexpected token else
  at ? (/hiventy/kraken-prod/issues/438681831/)"
        key="0"
        target="SyntaxError: Unexpected token else
  File \\"/hiventy/kraken-prod/issues/438681831/\\""
        type="words"
      >
        <SplitTable>
          <table
            className="css-wsqk0b-SplitTable ecj3sk90"
          >
            <SplitBody>
              <tbody
                className="css-19qmpmx-SplitBody ecj3sk91"
              >
                <tr
                  key="0"
                >
                  <Cell>
                    <td
                      className="css-13bglbj-Cell ecj3sk92"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line ecj3sk94"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                              SyntaxError: Unexpected token else
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                  <Gap>
                    <td
                      className="css-yrby37-Gap ecj3sk93"
                    />
                  </Gap>
                  <Cell>
                    <td
                      className="css-13bglbj-Cell ecj3sk92"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line ecj3sk94"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                              SyntaxError: Unexpected token else
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                </tr>
                <tr
                  key="1"
                >
                  <Cell
                    isRemoved={
                      Object {
                        "added": undefined,
                        "count": 1,
                        "removed": true,
                        "value": "at",
                      }
                    }
                  >
                    <td
                      className="css-cpyxzz-Cell ecj3sk92"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line ecj3sk94"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                                
                            </span>
                          </Word>
                          <Word
                            isRemoved={true}
                            key="1"
                          >
                            <span
                              className="css-1hluz4h-Word ecj3sk95"
                            >
                              at
                            </span>
                          </Word>
                          <Word
                            key="2"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                               
                            </span>
                          </Word>
                          <Word
                            isRemoved={true}
                            key="3"
                          >
                            <span
                              className="css-1hluz4h-Word ecj3sk95"
                            >
                              ? (/
                            </span>
                          </Word>
                          <Word
                            key="4"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                              hiventy/kraken-prod/issues/438681831
                            </span>
                          </Word>
                          <Word
                            isRemoved={true}
                            key="5"
                          >
                            <span
                              className="css-1hluz4h-Word ecj3sk95"
                            >
                              /)
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                  <Gap>
                    <td
                      className="css-yrby37-Gap ecj3sk93"
                    />
                  </Gap>
                  <Cell
                    isAdded={
                      Object {
                        "added": true,
                        "count": 1,
                        "removed": undefined,
                        "value": "File",
                      }
                    }
                  >
                    <td
                      className="css-uc8op2-Cell ecj3sk92"
                    >
                      <Line>
                        <div
                          className="css-bjvbcj-Line ecj3sk94"
                        >
                          <Word
                            key="0"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                                
                            </span>
                          </Word>
                          <Word
                            isAdded={true}
                            key="1"
                          >
                            <span
                              className="css-1pqukun-Word ecj3sk95"
                            >
                              File
                            </span>
                          </Word>
                          <Word
                            key="2"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                               
                            </span>
                          </Word>
                          <Word
                            isAdded={true}
                            key="3"
                          >
                            <span
                              className="css-1pqukun-Word ecj3sk95"
                            >
                              "/
                            </span>
                          </Word>
                          <Word
                            key="4"
                          >
                            <span
                              className="css-1dmt934-Word ecj3sk95"
                            >
                              hiventy/kraken-prod/issues/438681831
                            </span>
                          </Word>
                          <Word
                            isAdded={true}
                            key="5"
                          >
                            <span
                              className="css-1pqukun-Word ecj3sk95"
                            >
                              /"
                            </span>
                          </Word>
                        </div>
                      </Line>
                    </td>
                  </Cell>
                </tr>
              </tbody>
            </SplitBody>
          </table>
        </SplitTable>
      </SplitDiff>
    </div>
  </StyledIssueDiff>
</IssueDiff>
`;

exports[`IssueDiff is loading when initially rendering 1`] = `
<StyledIssueDiff
  loading={true}
>
  <LoadingIndicator />
</StyledIssueDiff>
`;
